--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -1,25 +1,25 @@
 .container {
   width: 100%;
-  max-width: 320px;
+  width: 1200px;
   margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
 
-  @include tablet {
-    padding-left: 32px;
-    padding-right: 32px;
-  }
+  // @include tablet {
+  //   padding-left: 32px;
+  //   padding-right: 32px;
+  // }
 
-  @include desktop {
-    padding-left: 16px;
-    padding-right: 16px;
-  }
+  // @include desktop {
+  //   padding-left: 16px;
+  //   padding-right: 16px;
+  // }
 
-  @include tablet {
-    max-width: 768px;
-  }
+  // @include tablet {
+  //   max-width: 768px;
+  // }
 
-  @include desktop {
-    max-width: 1200px;
-  }
+  // @include desktop {
+  //   max-width: 1200px;
+  // }
 }
